add:添加获取探头api
