# pkg/apiserver/api.go
@@ -1,108 +1,20 @@
 package apiserver
 
 import (
-	"context"
-	"errors"
 	"fmt"
-	"github.com/go-playground/validator/v10"
-	"github.com/mmfc-labs/driving-assistant/pkg/config"
-	"github.com/mmfc-labs/driving-assistant/pkg/lbs"
-	"github.com/mmfc-labs/driving-assistant/pkg/lbs/drive"
-	"github.com/mmfc-labs/driving-assistant/pkg/probe"
-	"github.com/mmfc-labs/driving-assistant/version"
-	ginSwagger "github.com/swaggo/gin-swagger"
-	"github.com/swaggo/gin-swagger/swaggerFiles"
-	"net/http"
-	"reflect"
-	"strings"
-	"time"
-
 	"github.com/gin-gonic/gin"
-	_ "github.com/mmfc-labs/driving-assistant/docs"
+	"github.com/mmfc-labs/driving-assistant/pkg/config"
+	"github.com/mmfc-labs/driving-assistant/pkg/lbs/drive"
 	log "github.com/sirupsen/logrus"
+	"net/http"
 )
-
-type APIServer struct {
-	router     *gin.Engine
-	srv        *http.Server
-	validate   *validator.Validate
-	calculator *lbs.Calculator
-}
-
-func NewAPIServer(opt Options) *APIServer {
-	validate := validator.New()
-	validate.RegisterTagNameFunc(func(fld reflect.StructField) string {
-		name := strings.SplitN(fld.Tag.Get("json"), ",", 2)[0]
-		if name == "-" {
-			return ""
-		}
-		return name
-	})
-	router := gin.Default()
-
-	srv := &http.Server{
-		Addr:    opt.Addr,
-		Handler: router,
-	}
-
-	apiServer := &APIServer{
-		router:   router,
-		srv:      srv,
-		validate: validate,
-	}
-
-	err := config.LoadConfig(opt.ConfigPath, func(setting config.Setting, probe probe.Probe) {
-		apiServer.calculator = lbs.NewCalculator(setting, probe)
-		log.WithField("setting", setting).WithField("probe", probe).Info("重新加载配置成功")
-	})
-
-	if err != nil {
-		panic(err)
-	}
-
-	apiServer.registerAPI()
-	return apiServer
-}
-
-func (s *APIServer) registerAPI() {
-	s.router.GET("/api/healthz", func(c *gin.Context) {
-		c.String(200, "I'm fine")
-	})
-	s.router.GET("/api/version", func(c *gin.Context) {
-		c.JSON(200, gin.H{"version": version.Version, "gitRevision": version.GitRevision})
-	})
-	s.router.Use(HandleCors).GET("/api/route", s.route)
-	s.router.Use(HandleCors).GET("/api/route_road", s.routeByRoad)
-	s.router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-}
-
-func (s *APIServer) Stop() {
-	ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
-	defer cancel()
-	if err := s.srv.Shutdown(ctx); err != nil {
-		log.Fatal("api server forced to shutdown:", err)
-	}
-	log.Info("api server exit ")
-}
-
-func (s *APIServer) Run() {
-	go func() {
-		if err := s.srv.ListenAndServe(); err != nil {
-			if errors.Is(err, http.ErrServerClosed) {
-				log.Info("api server close")
-				return
-			}
-			log.Fatal("api server listen: ", err)
-		}
-	}()
-}
 
 // route
 // @Tags driving
 // @Summary 路线规划，获取需要避让的区域
 // @accept application/json
 // @Produce application/json
-// @Param data query RouteRequest true "RouteRequest"
+// @Param data query RouteRequest true "请求"
 // @success 200 {object} Response{data=RouteResponse} "返回结果"
 // @Router /api/route [get]
 func (s *APIServer) route(c *gin.Context) {
@@ -122,52 +34,7 @@ func (s *APIServer) route(c *gin.Context) {
 	from, to := drive.Coord{Lat: req.FromLat, Lon: req.FromLon}, drive.Coord{Lat: req.ToLat, Lon: req.ToLon}
 
 	//根据直线距离计算需要避让的探头
-	avoidPoints, err := s.calculator.AvoidProbeByLine(from, to)
-	if err != nil {
-		Result(http.StatusInternalServerError, nil, err.Error(), c)
-		return
-	}
-	log.Info("根据直线距离计算需要避让的探头")
-	for key, _ := range avoidPoints {
-		fmt.Println(key)
-	}
-
-	avoidArea := make([][]drive.Coord, 0)
-	for a, _ := range avoidPoints {
-		avoidArea = append(avoidArea, drive.ConvCoordToAvoidArea(a, config.AvoidAreaOffset))
-	}
-
-	Result(http.StatusOK, RouteResponse{AvoidAreas: avoidArea}, "", c)
-}
-
-// route
-// @Tags driving
-// @Summary 路线规划，获取需要避让的区域(根据路面距离计算,暂时废弃)
-// @accept application/json
-// @Produce application/json
-// @Param data query RouteRequest true "RouteRequest"
-// @success 200 {object} Response{data=RouteResponse} "返回结果"
-// @Router /api/route_road [get]
-func (s *APIServer) routeByRoad(c *gin.Context) {
-	Result(http.StatusBadRequest, nil, "暂时废弃", c)
-	return
-	var (
-		req RouteRequest
-	)
-	if err := c.ShouldBindQuery(&req); err != nil {
-		Result(http.StatusBadRequest, nil, err.Error(), c)
-		return
-	}
-	if err := s.validate.Struct(req); err != nil {
-		Result(http.StatusBadRequest, nil, err.Error(), c)
-		return
-	}
-
-	// 起点，终点
-	from, to := drive.Coord{Lat: req.FromLat, Lon: req.FromLon}, drive.Coord{Lat: req.ToLat, Lon: req.ToLon}
-
-	//根据直线距离计算需要避让的探头
-	avoidPoints, err := s.calculator.AvoidProbeByRoad(from, to)
+	avoidPoints, err := s.calculator.AvoidProbe(from, to)
 	if err != nil {
 		Result(http.StatusInternalServerError, nil, err.Error(), c)
 		return
@@ -196,15 +63,41 @@ type RouteResponse struct {
 	AvoidAreas [][]drive.Coord `json:"avoid_areas"`
 }
 
-func Result(httpStatus int, data interface{}, errorMsg string, c *gin.Context) {
-	c.JSON(httpStatus, Response{
-		data,
-		errorMsg,
-	})
-	return
+// probes
+// @Tags driving
+// @Summary 获取探头
+// @accept application/json
+// @Produce application/json
+// @Param data query ProbeRequest true "请求"
+// @success 200 {object} Response{data=ProbeResponse} "返回结果"
+// @Router /api/probes [get]
+func (s *APIServer) probes(c *gin.Context) {
+	var (
+		req ProbeRequest
+	)
+	if err := c.ShouldBindQuery(&req); err != nil {
+		Result(http.StatusBadRequest, nil, err.Error(), c)
+		return
+	}
+	if err := s.validate.Struct(req); err != nil {
+		Result(http.StatusBadRequest, nil, err.Error(), c)
+		return
+	}
+	probes, err := s.calculator.Probes(drive.Coord{Lat: req.Lat, Lon: req.Lon}, req.Near)
+	if err != nil {
+		Result(http.StatusInternalServerError, nil, err.Error(), c)
+		return
+	}
+
+	Result(http.StatusOK, ProbeResponse{Probes: probes}, "", c)
 }
 
-type Response struct {
-	Data     interface{} `json:"data"`
-	ErrorMsg string      `json:"error_msg"`
+type ProbeRequest struct {
+	Lat  float64 `form:"lat" json:"lat"`   // 当前位置经度
+	Lon  float64 `form:"lon" json:"lon"`   // 当前位置纬度
+	Near float64 `form:"near" json:"near"` // 获取附近多少公里的探头，0为获取所有探头
+}
+
+type ProbeResponse struct {
+	Probes []drive.Coord `json:"probes"`
 }
